--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-package-manager",
-  "version": "1.0.2",
+  "name": "kaminagagenki-nodepackagemanager",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
